--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,65 +1,3 @@
-<h1>Eventos</h1>
-
-<div class="row align-items-center mb-2">
-  <div class="col-auto mr-2">
-    <label class="form-label mr-2">Filtro:</label>
-   </div>
-   <div class="col-auto">
-    <input
-    type="text"
-    class="form-control mr-2"
-    placeholder="buscar"
-    [(ngModel)]="filtroLista">
-  </div>
-</div>
-
-<table class="table table-striped ">
-  <thead class="table-dark">
-    <tr>
-      <th>
-        <button type="button"
-          class="btn btn-outline-light btn-sm"
-          (click)="alterarImagem()">
-          {{ !exibirImagem? 'exibir' : 'ocultar'}}
-        </button>
-      </th>
-      <th>#</th>
-      <th>Tema</th>
-      <th>Local</th>
-      <th>Data</th>
-      <th>Qtd Pessoas</th>
-      <th>Lote</th>
-      <th>Opções</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="eventos && eventos.length">
-    <tr *ngFor="let evento of eventosFiltrados">
-      <td>
-        <img
-        [collapse]="!exibirImagem"
-        [isAnimated]="true"
-        src="/assets/{{evento.imagemURL}}"
-        alt=""
-        [style.width.px]="150"
-        [style.margin.px]="2">
-      </td>
-      <td>{{evento.eventoId}}</td>
-      <td>{{evento.tema}}</td>
-      <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento}}</td>
-      <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lote}}</td>
-      <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2">Editar</button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
-      </td>
-    </tr>
-  </tbody>
-  <tfoot *ngIf="!eventos.length">
-    <tr>
-      <td colspan="8" class="text-center">
-        <h4>Nenhum evento encontrado</h4>
-      </td>
-    </tr>
-  </tfoot>
-</table>
+<app-titulo [titulo]="'Eventos'" [iconClass]="'fa fa-calendar-alt'" [botaoListar]="true">
+</app-titulo>
+<router-outlet></router-outlet>
